Fix stars on small screens
One star goes by the line on viewports < 406px

--- a/files/style.css
+++ b/files/style.css
@@ -85,7 +85,7 @@ li span {
 }
 
 h1 {
-    letter-spacing: 0.3em;
+    letter-spacing: 0.2em;
     font-family: Arial, "sans serif";
     text-align: center;
     padding-left: 20px;
